Fixed overlaping issue.

--- a/BetCaculator/css/ghpages-materialize.css
+++ b/BetCaculator/css/ghpages-materialize.css
@@ -7716,7 +7716,7 @@ background-color:#4CAF50
 overflow:hidden;
 position:relative;
 width:100%;
-height:200px;
+height:220px;
 -webkit-perspective:500px;
 perspective:500px;
 -webkit-transform-style:preserve-3d;
