--- a/BetCaculator/css/style.css
+++ b/BetCaculator/css/style.css
@@ -144,7 +144,7 @@ label {
 }
 .slider_iframe {
   width: 100%;
-  /*height: 440px;*/
+  height: 220px;
   border: 0px;
   margin-top: 2%;
 }
